@@ -1,3 +1,10 @@
+2002-02-17  Ian Lance Taylor  <ian@airs.com>
+
+	* unix/serial.c (fsserial_open): Make sure that we can not set the
+	ibaud field to zero for a terminal.
+	(fsysdep_conn_io): Only use baud rate in delay calculations on a
+	terminal.
+
 2002-02-16  Ian Lance Taylor  <ian@airs.com>
 
 	* configure.in: When checking for <sys/select.h>, only include
